--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,10 @@
 [pytest]
 render_collapsed = True
+log_cli = 1
+log_cli_level = INFO
+log_cli_format = %(asctime)s [%(levelname)8s] (%(filename)s:%(lineno)s) %(message)s
+log_cli_date_format = %Y-%m-%d %H:%M:%S
+log_file = logs/logs.txt
+log_file_level = INFO
+log_file_format = %(asctime)s [%(levelname)8s] (%(filename)s:%(lineno)s) %(message)s
+log_file_date_format = %Y-%m-%d %H:%M:%S
