--- a/pytest.ini
+++ b/pytest.ini
@@ -1,17 +1,19 @@
 [pytest]
 render_collapsed = True
-;log_cli = 1
-;log_cli_level = INFO
-;log_cli_format = %(asctime)s [%(levelname)8s] (%(filename)s:%(lineno)s) %(message)s
-;log_cli_date_format = %Y-%m-%d %H:%M:%S
+;实时日志
+log_cli = 1
+log_cli_level = DEBUG
+log_cli_format = %(asctime)s [%(levelname)8s] (%(filename)s:%(lineno)s) %(message)s
+log_cli_date_format = %Y-%m-%d %H:%M:%S
+
 ;log_file = logs/logs.txt
 ;log_file_level = INFO
 ;log_file_format = %(asctime)s [%(levelname)8s] (%(filename)s:%(lineno)s) %(message)s
 ;log_file_date_format = %Y-%m-%d %H:%M:%S
 
-log_level = INFO
-log_format = %(asctime)s [%(levelname)8s] (%(filename)s:%(lineno)s) %(message)s
-log_date_format = %Y-%m-%d %H:%M:%S
+;log_level = INFO
+;log_format = %(asctime)s [%(levelname)8s] (%(filename)s:%(lineno)s) %(message)s
+;log_date_format = %Y-%m-%d %H:%M:%S
 
 addopts = --html=./test_reports/test_report.html -s -v
 
