文件下载测试

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,10 +1,10 @@
 [pytest]
 render_collapsed = True
 ;实时日志
-log_cli = 1
-log_cli_level = DEBUG
-log_cli_format = %(asctime)s [%(levelname)8s] (%(filename)s:%(lineno)s) %(message)s
-log_cli_date_format = %Y-%m-%d %H:%M:%S
+;log_cli = 1
+;log_cli_level = INFO
+;log_cli_format = %(asctime)s [%(levelname)8s] (%(filename)s:%(lineno)s) %(message)s
+;log_cli_date_format = %Y-%m-%d %H:%M:%S
 
 ;log_file = logs/logs.txt
 ;log_file_level = INFO
@@ -19,4 +19,4 @@ addopts = --html=./test_reports/test_report.html -s -v
 
 ;python_files =
 ;python_classes =
-;python_functions =
+python_functions = test_pipy
